replace Objects.requireNonNull() with Preconditions.checkNotNull()
Also, this commit makes sure the `checkNotNull` method is always imported
statically, so that the class name `Preconditions` is not used in the code.